--- a/css/index.css
+++ b/css/index.css
@@ -576,7 +576,7 @@ a {
     color: #222;
     font-weight: bold;
     font-size: 3.5rem;
-    padding: 17% 1rem 1rem 1rem;
+    padding: 17% 1rem 1rem 2rem;
     display: inline-block;
     background: rgba(255,255,255,0.5);
     height: 100%;
@@ -607,6 +607,9 @@ a {
     #visual {
         height: 300px;
     }
+    #visual .title{
+        font-size: 2rem;
+    }
 }
 
 @media screen and (max-width:760px) {}
@@ -614,6 +617,9 @@ a {
 @media screen and (max-width:480px) {
     #visual {
         padding-top: 90px;
+    }
+    #visual .title{
+        font-size: 1.2rem;
     }
 }
 
